--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="picture_get_type">
+        <item >
+            拍照
+        </item>
+        <item >
+            相册获取
+        </item>
+    </string-array>
+    
     <string name="app_name">AudioRecordTest</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="picture_select">图片选择</string>
 
+    
 </resources>
